Wire sfl_policy.cpp into ofc_cpp target and SFL dataset tools

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SRC
   ofc_actions.cpp
   ofc_encode.cpp
   ofc_engine.cpp
+  sfl_policy.cpp
 )
 
 # Require C++20 for designated initializers used in Rules.hpp
