Add Rules.hpp with OFC game constants and royalty tables

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -17,6 +17,9 @@ target_include_directories(ofc_cpp PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_SOURCE_DIR}/include
 )
+
+# Ensure include directory exists
+file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/include)
 target_compile_definitions(ofc_cpp PRIVATE PYBIND11_DETAILED_ERROR_MESSAGES)
 
 # Install the extension at top-level (so import ofc_cpp works)
